trying to fix the image so that the background will change when on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,16 @@ input[type=radio]:checked ~ .option {
     .choice-content-box h1{
         font-size: 1.2rem;
     }
+
+    #home-image {
+        height: 100%;
+        background: url("../images/harry-4.jpg");
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+        
+    }
+
 }
 
 
